updating bd and documentation
