# src/routes/specifications.routes.ts
@@ -1,9 +1,9 @@
 import { Router } from "express";
 
-import { createSpecificationController } from "../modules/cars/useCases/createSpecification";
+import { CreateSpecificationController } from "../modules/cars/useCases/createSpecification/CreateSpecificationController";
 
 export const specificationsRoutes = Router();
 
-specificationsRoutes.post("", (req, res) =>
-  createSpecificationController.handle(req, res)
-);
+const createSpecificationController = new CreateSpecificationController();
+
+specificationsRoutes.post("", createSpecificationController.handle);
